fix whoami long line not wraping

--- a/src/Line.css
+++ b/src/Line.css
@@ -30,5 +30,5 @@
 }
 
 span {
-    white-space:pre;
+    white-space: break-spaces;
 }
